Refactor: Update Java version to 21 and improve URL handling in HttpURL and related classes